# Meri_Bot_Rust

./: .gitignore  ANTI_PROPAGANDA_FIX.md  COMPILATION_FIXES.md  CONFIGURATION.md  CONTEXT_PERSISTENCE_FIX.md  Cargo.toml  LOGGING.md  PLANNING.md  RANK_MODULAR_SYSTEM.md  README.md  SLASH_COMMANDS.md  VISION.md  WRAPPER_README.md  YTsubs.rs  example.env  example_bot_config.txt  example_botconfig.txt  example_lmapiconf.txt  example_rank_accessibility_prompt.txt  example_rank_seo_prompt.txt  example_rank_system_prompt.txt  example_rank_usability_prompt.txt  example_reasoning_prompt.txt  example_reasoning_search_analysis_prompt.txt  example_refine_search_prompt.txt  example_summarization_prompt.txt  example_summarize_search_prompt.txt  example_system_prompt.txt  example_youtube_prompt_generation_prompt.txt  example_youtube_summarization_prompt.txt
src/: context.rs  echo.rs  help.rs  lm.rs  main.rs  meri_bot.rs  mod.rs  ping.rs  profilepfp.rs  reason.rs  search.rs  sum.rs  vis.rs
src/commands/: admin.rs  agent.rs  echo.rs  help.rs  lm.rs  mod.rs  ping.rs  rank.rs  reason.rs  search.rs  slash.rs  sum.rs  vis.rs
