[package]
name = "meri_bot_rust"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
serpapi = "1.0.0"
